Fixed tooltip and profile spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,9 +12,8 @@ $font-family: 'Manrope';
 
 /* TODO:
    fix picture height
-   add alt text
-   adjust button spacing on all, try not using margin, use something responsive
    on tablet and desktop add active colors to button
+   check all files for fixes and todo's
 */
 
 body {
@@ -53,10 +52,11 @@ p {
     display: flex;
     flex-direction: row;
     flex-shrink: 2;
-    gap: 2rem;
+    gap: 1rem;
     padding-top: 2rem;
     padding-bottom: 1.5rem;
     align-items: center;
+    justify-content: space-between;
 }
 
 .avatar {
@@ -87,6 +87,7 @@ button {
 .social-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     flex-shrink: 2;
     gap: 1rem;
     padding: 1rem 2rem;
@@ -203,7 +204,7 @@ h3 {
 
     .social-container {
         top: 8rem;
-        right: -2.8rem;
+        right: -3.8rem;
     }
 
 
